# Nozzle-Filament-Post-Processor

./: .gitignore  README.md  pyarmor-cmd.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
Releases/: generate-zips.bat  generate-zips.sh  generate_zips.sh
implementations/python/: build_linux.sh  nvfPostprocessor.py  postprocessor.py  setup-postprocessor-python.bat  setup_postprocessor-python.sh  version_file.py
implementations/rust/: Cargo.toml  build.rs  setup.py
implementations/rust/src/: lib.rs  main.rs  qt_frontend.cpp
macos/: nfvsettings.json  setup-postprocessor-macos.sh  setup_postprocessor-macos.sh
macos/nvfPostprocessor.app/Contents/: Info.plist
macos/nvfPostprocessor.app/Contents/Resources/: generated-ef30d109108e036b3ea658617d6adb85fd1b59f92e83b3f8ebf8cd21bf82ad45.icns
macos/nvfPostprocessor.app/Contents/_CodeSignature/: CodeResources
python/: build_linux.sh  build_macos.sh  build_windows.bat  example_data.json  nvfPostprocessor.py  postprocessor.py  requirements.txt  setup-postprocessor-python.bat  setup_postprocessor-python.sh  version.ini
windows/: create_shortcut.vbs  setup-postprocessor-exe.bat  setup-postprocessor-windows.bat
